# CraveCompass

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.bat
Backend/app/: config.py  graph.py  main.py  schemas.py
Backend/nodes/: extract_menu.py  validate_image.py  validate_query.py
Backend/services/: item_details_agent.py  llm_factory.py
Backend/utils/: logger.py
Frontend/: app.js  index.html  style.css
